<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NVK BlogApp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="prompt_name">Fullname</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_account">Profile</string>
    <string name="title_search">Search</string>
    <string name="title_friend">Friend</string>
    <string name="title_post">Post</string>
    <string name="title_signup">Don\'t have an account? Sign up</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
