<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_black_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/title_post" />
    <item
        android:id="@+id/navigation_friend"
        android:icon="@drawable/ic_baseline_loyalty_24"
        android:title="@string/title_friend" />

    <item
        android:id="@+id/navigation_Account"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_account" />


</menu>
