<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.blogapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_Account"
            app:destination="@id/navigation_Account" />
        <action
            android:id="@+id/action_navigation_home_to_commentActivity"
            app:destination="@id/commentActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_post"
        android:name="com.example.blogapp.ui.post.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post">
        <action
            android:id="@+id/action_navigation_post_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_Account"
        android:name="com.example.blogapp.ui.Account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
    <activity
        android:id="@+id/commentActivity"
        android:name="com.example.blogapp.Activity.CommentActivity"
        android:label="activity_comments"
        tools:layout="@layout/activity_comments" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.blogapp.ui.SearchUserFragment"
        android:label="@string/title_search"
        tools:layout="@layout/search_user_fragment" />
    <fragment
        android:id="@+id/navigation_friend"
        android:name="com.example.blogapp.ui.FriendFragment"
        android:label="@string/title_friend"
        tools:layout="@layout/fragment_friend" />


</navigation>
